agent9527-rs/tui/src/bottom_pane/snapshots/agent9527_tui__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Select Model and Effort                                                       
                                                                                
› 1. gpt-5.1-agent9527 (current)  Optimized for Agent9527. Balance of           
                                  reasoning quality and coding ability.         
  2. gpt-5.1-agent9527-mini       Optimized for Agent9527. Cheaper, faster,     
                                  but less capable.                             
  3. gpt-4.1-agent9527            Legacy model. Use when you need               
                                  compatibility with older automations.
